gitops/apps/targeting-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: targeting-service
  namespace: targeting-service
  labels:
    app: targeting-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: targeting-service
  template:
    metadata:
      labels:
        app: targeting-service
    spec:
      containers:
        - name: targeting-service
          image: 681447159486.dkr.ecr.us-east-1.amazonaws.com/targeting-service:v1.0.0-4a792c0
          ports:
            - containerPort: 8003
          readinessProbe:
            httpGet:
              path: /health
              port: 8003
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8003
            initialDelaySeconds: 10
            periodSeconds: 20
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: targeting-service
  namespace: targeting-service
spec:
  type: ClusterIP
  ports:
    - port: 8003
      targetPort: 8003
  selector:
    app: targeting-service
